# mavros_offboard_example

./: LICENSE  README.md  package.xml
launch/: default.rviz  rviz.launch
mavros_offboard_example/: CMakeLists.txt
mavros_offboard_example/launch/: example.launch  px4.launch
mavros_offboard_example/src/: offb_node.cpp
src/: offb_node.cpp
